LIST OF CHANGES
---------------

 - a new script - npg_upload2climb - to perform the upload, which is
   specified in the definition generated by the pp_archiver function
 - required arguments are passed to the npg_upload2climb script when
   the pp_archiver function job description is generated

release 57.12.0
 - a new function definition class npg_pipeline::function::pp_archiver,
   implementing two new pipeline functions - 'pp_archiver' and 
   'pp_archiver_manifest'

release 57.11.0
 - a generic API for sequencing data metadata upload to a third party
   and a script for uploading metadata for Illumina
   sequencing platform
 - product-specific primer panel bed file in seq_alignment
 - simple robo QC step added straight after running the ncov2019-artic-nf
   portable pipeline; the step creates a utility (user) QC outcome

release 57.10.0
 - new function, stage2pp, for running portable pipelines straight
   after stage1 in parallel to seq_alignment

release 57.9.0
 - small change to seq_alignment.pm so it does not error if 
   gbs_plex_name (primer_panel) is set but lib type incompatible
   with gbs analysis
 - when markdup_method is "none", add skip_markdup_metrics flag
   to bam_flagstats qc command

release 57.8.0
 - ability to apply limits to wr groups of jobs and a limit for
   all iRODS jobs
 - function creating definitions for autoqc jobs - when evaluating
   whether the autoqc check should be run:
     reduce run time by passing to the autoqc class instance,
     where appropriate, a lims object and fastq reference path;
     explicitly pass product_conf_file_path to this instance 
 - iRODS archival of non-products is driven by settings of products,
   i.e if all products in the lane should not be archived to iRODS,
   non-products (tag zero and spiked PhiX tag) will not be archived
   either
 - remove the old warehouse loader from the analysis function graph 
 - remove function for illumina qc analysis archival (old way of