@@ -5,6 +5,7 @@ LIST OF CHANGES
    specified in the definition generated by the pp_archiver function
  - required arguments are passed to the npg_upload2climb script when
    the pp_archiver function job description is generated
+ - the pp_archiver function is added to the archival pipeline graph
 
 release 57.12.0
  - a new function definition class npg_pipeline::function::pp_archiver,
